# stm32f407xx_pomodoro

./: .cproject  .mxproject  .project  LICENSE  README.md  STM32F407VGTX_FLASH.ld  lv_conf.h  stm32f407xx_pomodoro.launch  stm32f407xx_spi_lcd_2.4inch.ioc  stm32f407xx_spi_lcd_2.4inch.launch
Core/Inc/: clock_config.h  debug_utils.h  stm32f4xx_it.h
Core/Src/: clock_config.c  debug_utils.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Core/Src/pomodoro/: CMakeLists.txt  readme.md
Core/Src/pomodoro/Core/: event.c  event.h  pomodoro.c  pomodoro.h  timer.c  timer.h
Core/Src/pomodoro/UI/: demo.c  demo.h  full_screen.c  full_screen.h  main_screen.c  main_screen.h  settings_screen.c  settings_screen.h
Core/Src/pomodoro/assets/: get_ready_64x64.c  long_break.c  objective.c  race.c  run.c  setting_icon.c  short_break.c  speed.c
Core/Src/pomodoro/doc/: .$PomodoroStateMachine.drawio.bkp  PomodoroStateMachine.drawio
bsp/lcd/: config.h  hw_def.h  ili9341_reg.h  lcd.c  lcd.h
bsp/lcd/tsc/: XPT2046.c  XPT2046.h
bsp/lvgl/: lv_drv_conf.h  tft.c  tft.h  touchpad.c
lvgl/examples/anim/: lv_example_anim_2.c
